--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Aleksandra Jaremko, LSE Master's student
+title: Aleksandra, an LSE student
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Aleksandra Jaremko!</h1>
+	<h1>Hi there, I'm Aleksandra!</h1>
 	<p>I'm best known as your peer from the <em>School of Public Policy</em> here at LSE. You can trust me! <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
